--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,21 @@
           li{
                cursor: pointer;
           }
+          li:hover {
+               color: blue;
+          }
      </style>
 </head>
 <body>
      <div id="root">
           <ul id="ms-container"></ul>
-          
+
           <ul id="state">
-               <li id="state-icon"></li>
+               
           </ul>
      </div>
 
+     <script type="module" src="include.js"></script>
      <script type="module" src="app.js"></script>
 </body>
 </html>
